src/objects/Community_Tag__c.object
<CustomObject>
    <description>Define a library of Tags that will help categorize interests for the Community.  Tags can be associated to Community News, Events, Groups, and Contacts via separate junction objects.  This will allow the starter pack to recommend items to a Community user.</description>
    <fields>
        <fullName>Community_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the Theme of the Community Tag.</description>
        <inlineHelpText>Represents the Theme of the Community Tag.</inlineHelpText>
        <label>Community Theme</label>
        <referenceTo>Community_Theme__c</referenceTo>
        <relationshipLabel>Community Tags</relationshipLabel>
        <relationshipName>Community_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Icon_Style__c</fullName>
        <description>Describes the Icon style to be applied to these records in search results</description>
        <inlineHelpText>Describes the Icon style to be applied to these records in search results</inlineHelpText>
        <label>Icon Style</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_SF_ID__c</fullName>
        <description>Represents the 18 digit unique Salesforce ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit unique Salesforce ID.</inlineHelpText>
        <label>Tag SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Theme_UniqueID__c</fullName>
        <description>Coming Soon.</description>
        <inlineHelpText>Coming Soon.</inlineHelpText>
        <label>Tag-Theme UniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Theme_Name__c</fullName>
        <description>the name of the theme the tag is associated with</description>
        <formula>Community_Theme__r.Name</formula>
        <label>Theme Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme_Type__c</fullName>
        <description>Represents the Theme Type of the Theme related to the Tag.</description>
        <formula>TEXT(Community_Theme__r.Theme_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Theme Type of the Theme related to the Tag.</inlineHelpText>
        <label>Theme Type</label>
        <type>Text</type>
    </fields>
    <label>Community Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Community_Theme__c</columns>
        <columns>Theme_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Tags</fullName>
        <columns>Community_Theme__c</columns>
        <columns>NAME</columns>
        <columns>Theme_Type__c</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Tags</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Interest_Tags</fullName>
        <columns>Community_Theme__c</columns>
        <columns>NAME</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Type__c</field>
            <operation>equals</operation>
            <value>Interest</value>
        </filters>
        <label>Interest Tags</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Resource_Tags</fullName>
        <columns>Community_Theme__c</columns>
        <columns>NAME</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filters>
        <label>Resource Tags</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>System_Tags</fullName>
        <columns>Community_Theme__c</columns>
        <columns>NAME</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Type__c</field>
            <operation>equals</operation>
            <value>System</value>
        </filters>
        <label>System Tags</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Community Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>